# scoop

./: CMakeLists.txt  README.md
include/: Analyzer.hpp  CameraParams.hpp  CompilationFlags.hpp  Config.hpp  ConfigParser.hpp  DepthFrame.hpp  DepthMediaFile.hpp  Frame.hpp  Media.hpp  PointCloudBase.hpp  PointCloudHelpers.hpp  PointCloudOpenCVBridge.hpp  Utils.hpp
py_based_prototypes/: analyzer.py  analyzer_pyav.py
sample_configs/: person.ini  screen.ini
sample_data/018_complex_many_items_dark/: android_photo_depth.adep  android_photo_rgb_depth_metric.ml_depth_pro.mldep  ios_photo_depth.idep  ios_photo_rgb_depth_metric.ml_depth_pro.mldep
sample_data/1014_018_the_frame_natural/: android_photo_depth.adep  android_photo_rgb_depth_metric.ml_depth_pro.mldep  ios_photo_depth.idep  ios_photo_rgb_depth_metric.ml_depth_pro.mldep
sample_data/1014_018_the_frame_natural/backup/: android_photo_depth.adep  android_photo_rgb_depth_metric.ml_depth_pro.mldep  config.ini
sample_data/1028_018_oled_dark/: android_photo_depth.adep  android_photo_rgb_depth_metric.ml_depth_pro.mldep  config.ini  ios_photo_depth.idep  ios_photo_rgb_depth_metric.ml_depth_pro.mldep
sample_data/1059_018_projector_no_light/: android_photo_depth.adep  android_photo_rgb_depth_metric.ml_depth_pro.mldep  config.ini  ios_photo_depth.idep  ios_photo_rgb_depth_metric.ml_depth_pro.mldep
scripts/: calculate_storage_overhead.py  copy_to_all_dirs.py  delete_all_mldep.py  eval.py  install_required_libraries.sh  process_media.py
src/: Analyzer.cpp  Config.cpp  ConfigParser.cpp  DepthFrame.cpp  DepthMediaFile.cpp  Frame.cpp  Media.cpp  PointCloudBase.cpp  PointCloudHelpers.cpp  PointCloudOpenCVBridge.cpp  Utils.cpp
